# django-api-people

./: .gitignore  Makefile  Procfile  Proticfile  README.md  pyproject.toml  requirements.txt
athenas_test/: Proticfile  manage.py
athenas_test/athenas_test/: asgi.py  settings.py  urls.py  wsgi.py
athenas_test/person/: apps.py  models.py  serializer.py  serializers.py  service.py  task.py  urls.py  views.py
athenas_test/person/migrations/: 0001_initial.py  0002_person.py
